# web_search_RAG_chat

./: README.md
.devcontainer/: devcontainer.json
nb_prototype/: README.md  app_frontend.py  app_langgraph.py  app_nb.ipynb  app_nb_langgraph.ipynb  messages.json  messages_agentic.json  pyproject.toml
nb_prototype/.ipynb_checkpoints/: README-checkpoint.md  app_nb-checkpoint.ipynb  app_nb_langgraph-checkpoint.ipynb  messages_agentic-checkpoint.json
