[tool.poetry]
name = "nb_prototype"
version = "0.1.0"
description = "Notebook prototype of my web search RAG chatbot"
authors = ["aditya venkatesh <aditya34@illinois.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.5"
jupyterlab = "*"
langchain = "*"
numpy = "^2.1.0"
langchain-core = "*"
python-dotenv = "*"
langchain-community = "*"
langchain-chroma = "*"
langchain-openai = "*"
requests = "*"
bs4 = "*"
html2text = "*"
selenium = "*"
websearchapi = "^1.0.1"
typing = "*"
typing_extensions = "*"
langgraph = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
